--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "shopping-basket",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://stevenwalker91.github.io/shopping-app",
   "dependencies": {
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
+    "gh-pages": "5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.8.0",
@@ -17,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --verbose --detectOpenHandles",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
