updating deployment options

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shopping-basket",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://stevenwalker91.github.io/shopping-app",
+  "homepage": "https://stevenwalker91.github.io/shopping-basket",
   "dependencies": {
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
